[project]
name = "vessel"
version = "3.0.1"
description = "A library for interpolating plasma parameters to a given diagnostic linear beam"
authors = [
    { name="Artyom Loginov", email="loginov.artem@phystech.edu" }
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.3.1",
    "scipy>=1.15.2",
    "freeqdsk>=0.5.0"
]

[project.urls]
Homepage = "https://github.com/helloginov/vessel.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
